<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/activity"/>
        <TextView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/video"/>
        <TextView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/image"/>
        <TextView
            android:id="@+id/voice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/voice"/>
        <TextView
            android:id="@+id/vote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/vote"/>
        <TextView
            android:id="@+id/leaderboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/leaderboard"/>
        <TextView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:layout_margin="8dp"
            android:text="@string/chat"/>
    </LinearLayout>

</HorizontalScrollView>